utils/edid: check if colorimetry could possibly be correct

With invalid colorimetry, selecting the "built-in" color profile could otherwise cause
a black screen or glitches.

BUG: 498616